Stability and documentation